# rust-server-fun

./: Cargo.toml  LICENSE  README.md
src/: client.rs  main.rs
