[package]
name = "rust-server-fun"
version = "0.1.0"
authors = ["fitz <nanunderflow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.1.0"

[dependencies.async-std]
version = "1.6.5"
features = ["attributes"]
